learnt table & abit of css

--- a/day1/basic.html
+++ b/day1/basic.html
@@ -1,7 +1,40 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <style>
+        body {
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+            background: rgb(255, 236, 246);
+            padding: 40px;
+        }
+
+        table {
+            width: 60%;
+            margin: auto;
+            border-collapse: collapse;
+            background: rgb(255, 192, 219);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        th {
+            background: rgb(255, 129, 184);
+            color: black;
+            padding: 12px 15px;
+            text-align: left;
+            font-size: 16px;
+        }
+
+        td {
+            padding: 12px 15px;
+            border-bottom: 1px solid rgba(255, 227, 247, 1);
+            font-size: 15px;
+            color: #333;
+        }
+    </style>
+</head>
 
 <body>
     <h1>This is a heading 1</h1>
@@ -13,39 +46,36 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque nihil culpa? Numquam beatae
         exercitationem fugit cupiditate incidunt. Incidunt sit mollitia maiores enim nihil, quas provident sapiente
         quibusdam tempore sequi?</p>
-    <table>
-        <tbody>
-            <ul>
-                <li>one</li>
-                <li>two</li>
-                <li>three</li>
-                <li>four</li>
-            </ul>
-            <ol>
-                <li>one</li>
-                <li>two</li>
-                <li>three</li>
-                <li>four</li>
-            </ol>
-        </tbody>
-    </table>
-    <table>
-        <ul>
-            <li>Food that I like</li>
-            <ol>
-                <li>Nasi lemak</li>
-                <li>Nasi lemak</li>
-                <li>Nasi lemak</li>
-            </ol>
-            <li>Sports that I do</li>
-            <ol>
-                <li>Rock climbing</li>
-                <li>Rock climbing</li>
-                <li>Rock climbing</li>
-            </ol>
-        </ul>
-        <ul></ul>
-    </table>
+    <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+        <li>four</li>
+    </ul>
+    <ol>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+        <li>four</li>
+    </ol>
+
+
+    <ul>
+        <li>Food that I like</li>
+        <ol>
+            <li>Nasi lemak</li>
+            <li>Nasi lemak</li>
+            <li>Nasi lemak</li>
+        </ol>
+        <li>Sports that I do</li>
+        <ol>
+            <li>Rock climbing</li>
+            <li>Rock climbing</li>
+            <li>Rock climbing</li>
+        </ol>
+    </ul>
+    <ul></ul>
+
 
     <!-- "target" send the link to new tab -->
     <a href="https://youtube.com/" target="_blank">Go to Youtube</a>
@@ -69,6 +99,30 @@
         <h1 href="https://www.jurassicworld.com/">Dinosaur!!</h1>
     </a>
 
+    <table>
+        <tbody>
+            <tr>
+                <th>No.</th>
+                <th>Food Name</th>
+                <th>Rating (?/10)</th>
+            </tr>
+            <tr>
+                <td>1.</td>
+                <td>Chicken Rice</td>
+                <td>8.5</td>
+            </tr>
+            <tr>
+                <td>2.</td>
+                <td>Pizza</td>
+                <td>7</td>
+            </tr>
+            <tr>
+                <td>3.</td>
+                <td>Cheese naan</td>
+                <td>9</td>
+            </tr>
+        </tbody>
+    </table>
 
 </body>
 <footer>
