css selector, grid, bootstrap

--- a/day1/basic.html
+++ b/day1/basic.html
@@ -2,37 +2,10 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="basic.css">
+
     <style>
-        body {
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-            background: rgb(255, 236, 246);
-            padding: 40px;
-        }
-
-        table {
-            width: 60%;
-            margin: auto;
-            border-collapse: collapse;
-            background: rgb(255, 192, 219);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            overflow: hidden;
-        }
-
-        th {
-            background: rgb(255, 129, 184);
-            color: black;
-            padding: 12px 15px;
-            text-align: left;
-            font-size: 16px;
-        }
-
-        td {
-            padding: 12px 15px;
-            border-bottom: 1px solid rgba(255, 227, 247, 1);
-            font-size: 15px;
-            color: #333;
-        }
+        /* internal styling */
     </style>
 </head>
 
@@ -40,7 +13,7 @@
     <h1>This is a heading 1</h1>
     <h2>This is a heading 2</h2>
     <h3>My name is Shuven</h3>
-    <h4>I love programming</h4>
+    <h4 id="heading">I love programming</h4>
     <h5>This is a heading 5</h5>
     <h6>This is a heading 6</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque nihil culpa? Numquam beatae
